Working story-viz
Add a tool to visualize a story and choose images that best represent
the story. This is a work in progress.

--- a/.github/workflows/deploy_react.yml
+++ b/.github/workflows/deploy_react.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - staging
 
 jobs:
   deploy:
@@ -34,4 +35,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION }}
           SOURCE_DIR: "react_slideshow/build"
+          DEST_DIR: ${{ github.ref == 'refs/heads/master' && '' || 'staging' }}
         if: success()
