Update story-viz app directory

--- a/.github/workflows/deploy_story_viz.yml
+++ b/.github/workflows/deploy_story_viz.yml
@@ -54,4 +54,5 @@ jobs:
           version: '>= 363.0.0'
 
       - name: Deploy to Google App Engine
+        working-directory: story-viz
         run: gcloud app deploy app.yaml --quiet
