--- a/.github/workflows/deploy_story_viz.yml
+++ b/.github/workflows/deploy_story_viz.yml
@@ -63,4 +63,4 @@ jobs:
 
       - name: Deploy to Google App Engine
         working-directory: story-viz
-        run: gcloud app deploy app.yaml --quiet
+        run: gcloud app deploy app.yaml --project ${{ env.GCP_PROJECT_ID }}
