--- a/.github/workflows/deploy_story_viz.yml
+++ b/.github/workflows/deploy_story_viz.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Install Python Dependencies
+        working-directory: story-viz/backend
+        run: ./copy_lib.sh
+  
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
