Add linting and testing for story-viz
Runs
 * mypy - type checking
 * pyflakes - static checking (linting)
 * black - format checking

Run `scripts/validate.py --watch` to run in interactive mode, or
without the `--watch` parameter for batch mode exactly as we run
in CI/CD

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 .secrets
 __pycache__
 .env
+.mypy_cache
+.pytest_cache
 # Ignore generated credentials from google-github-actions/auth
 gha-creds-*.json
