--- a/story-viz/requirements.txt
+++ b/story-viz/requirements.txt
@@ -1,11 +1,19 @@
+black
 boto3
+boto3-stubs
 fastapi
 google-cloud-secret-manager
 gunicorn
-python-dotenv
+mypy
 passlib[bcrypt]
+pyflakes
 pyjwt
 pymongo[srv]
+pytest
+python-dotenv
 python-multipart
 requests
+types-passlib
+types-requests
 uvicorn
+watchdog
