Add linting and testing for story-viz
Runs
 * mypy - type checking
 * pyflakes - static checking (linting)
 * black - format checking

Run `scripts/validate.py --watch` to run in interactive mode, or
without the `--watch` parameter for batch mode exactly as we run
in CI/CD

--- a/.github/workflows/deploy_story_viz.yml
+++ b/.github/workflows/deploy_story_viz.yml
@@ -39,21 +39,14 @@ jobs:
         working-directory: story-viz/frontend
         run: npm run build
 
-      - name: Get Python version 
-        run: python --version
-
       - name: Install Python Dependencies
         working-directory: story-viz
         run: |
           pip install -r requirements.txt
 
-      - name: Validate python
+      - name: Validate story-viz
         run: |
           python3 scripts/validate.py
-
-      - name: Copy python lib directory
-        working-directory: story-viz/backend
-        run: ./copy_lib.sh
   
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
