Support in story-viz for generating images via a button
Add backend API and frontend invocation of the API via a button for
each page in a story. Also add a carousel viewer for pages with more
than 4 images.

--- a/story-viz/requirements.txt
+++ b/story-viz/requirements.txt
@@ -5,15 +5,20 @@ fastapi
 google-cloud-secret-manager
 gunicorn
 mypy
+openai
 passlib[bcrypt]
+Pillow
 pyflakes
 pyjwt
 pymongo[srv]
 pytest
 python-dotenv
 python-multipart
+replicate
 requests
 types-passlib
+types-Pillow
 types-requests
 uvicorn
+wandb
 watchdog
