--- a/react_slideshow/package.json
+++ b/react_slideshow/package.json
@@ -2,7 +2,7 @@
   "name": "react_slideshow",
   "version": "0.1.0",
   "private": true,
-  "proxy":  "https://www.storytime.glass",
+  "proxy": "https://www.storytime.glass",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,7 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
