--- a/story-viz/.gcloudignore
+++ b/story-viz/.gcloudignore
@@ -12,8 +12,12 @@
 # below:
 .git
 .gitignore
-
 # Python pycache:
 __pycache__/
 # Ignored by the build system
 /setup.cfg
+# testing artifacts
+.mypy_cache
+.pytest_cache
+# frontend packages
+node_modules
